[package]
name = "api"
edition.workspace = true
version.workspace = true

[dependencies]
axum = "0.8.9"
tokio = { version = "1.53.1", features = ["full"] }
sea-orm.workspace = true
serde = "1.0.229"
serde_json = "1.0.151"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json", "env-filter"] }
dotenvy.workspace = true
anyhow.workspace = true
redis = { version = "1.4.1", features = ["tokio-comp", "connection-manager"] }
migration = { path = "../migration" }
uuid = { version = "1.24.0", features = ["v4", "v7", "serde"] }